[workspace]
members = [
    "rust/geoarrow",
    "rust/geoarrow-array",
    "rust/geoarrow-cast",
    "rust/geoarrow-csv",
    "rust/geoarrow-flatgeobuf",
    "rust/geoarrow-geo",
    "rust/geoarrow-geojson",
    "rust/geoarrow-geos",
    "rust/geoarrow-schema",
    "rust/geoarrow-test",
    "rust/geodatafusion-flatgeobuf",
    "rust/geodatafusion-geojson",
    "rust/geodatafusion-geoparquet",
    "rust/geodatafusion",
    "rust/geoparquet",
    "rust/pyo3-geoarrow",
]
exclude = ["js"]
resolver = "2"

[workspace.package]
version = "0.5.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoarrow/geoarrow-rs"
rust-version = "1.85"
categories = ["science::geo"]

[workspace.dependencies]
approx = "0.5.1"
arrow-arith = "56"
arrow-array = "56"
arrow-buffer = "56"
arrow-cast = "56"
arrow-csv = "56"
arrow-data = "56"
arrow-ipc = "56"
arrow-json = "56"
arrow-ord = "56"
arrow-schema = "56"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.10.0"
chrono = { version = "0.4.41", default-features = false }
# Arrow 56
datafusion = { git = "https://github.com/apache/datafusion", rev = "fa1f8c192dd531d3f2fca61885eafa3e9002f0dd" }
datafusion-datasource = { git = "https://github.com/apache/datafusion", rev = "fa1f8c192dd531d3f2fca61885eafa3e9002f0dd" }
datafusion-datasource-parquet = { git = "https://github.com/apache/datafusion", rev = "fa1f8c192dd531d3f2fca61885eafa3e9002f0dd" }
flatgeobuf = { version = "5.0", default-features = false }
futures = "0.3"
geo = "0.31.0"
geo-traits = "0.3.0"
geo-types = "0.7.16"
geoarrow-array = { path = "rust/geoarrow-array", version = "0.5" }
geoarrow-cast = { path = "rust/geoarrow-cast", version = "0.5" }
geoarrow-flatgeobuf = { path = "rust/geoarrow-flatgeobuf", version = "0.5" }
geoarrow-geo = { path = "rust/geoarrow-geo", version = "0.5" }
geoarrow-geojson = { path = "rust/geoarrow-geojson" }
geoarrow-schema = { path = "rust/geoarrow-schema", version = "0.5" }
geoarrow-test = { path = "rust/geoarrow-test", version = "0.5" }
geodatafusion = { path = "rust/geodatafusion" }
geohash = "0.13.1"
geojson = "0.24"
geoparquet = { path = "rust/geoparquet", version = "0.5" }
geos = { version = "10", features = ["v3_10_0"] }
geozero = "0.14"
http-range-client = { version = "0.9", default-features = false }
indexmap = "2.5.0"
num-traits = "0.2.19"
numpy = "0.25"
object_store = "0.12"
parquet = { version = "56", default-features = false }
pyo3 = "0.25"
# https://github.com/kylebarron/arro3/pull/354
pyo3-arrow = { git = "https://github.com/kylebarron/arro3", rev = "fda03cebe9cfbf8ad292f8070ea21c22b32af1a3" }
pyo3-geoarrow = { path = "rust/pyo3-geoarrow" }
rstar = "0.12.2"
serde = "1"
serde_json = "1"
serde_with = "3"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.9", default-features = false }
url = "2.5"
wkb = "0.9"
wkt = "0.14"
