[workspace]
members = [
    "rust/geoarrow",
    "rust/geoarrow-array",
    "rust/geoarrow-cast",
    "rust/geoarrow-csv",
    "rust/geoarrow-expr-geo",
    "rust/geoarrow-expr-geos",
    "rust/geoarrow-flatgeobuf",
    "rust/geoarrow-geojson",
    "rust/geoarrow-schema",
    "rust/geoarrow-test",
    "rust/geoparquet",
    "rust/pyo3-geoarrow",
]
exclude = ["js"]
resolver = "2"

[workspace.package]
version = "0.7.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/geoarrow/geoarrow-rs"
rust-version = "1.85"
categories = ["science::geo"]

[workspace.dependencies]
approx = "0.5.1"
arrow-arith = "58"
arrow-array = "58"
arrow-buffer = "58"
arrow-cast = "58"
arrow-csv = "58"
arrow-data = "58"
arrow-ipc = "58"
arrow-json = "58"
arrow-ord = "58"
arrow-schema = "58"
async-stream = "0.3"
async-trait = "0.1"
bytes = "1.10.0"
chrono = { version = "0.4.41", default-features = false }
flatgeobuf = { version = "5.0", default-features = false }
futures = "0.3"
geo = "0.31.0"
geo-traits = "0.3.0"
geo-types = "0.7.16"
geoarrow-array = { path = "rust/geoarrow-array", version = "0.7.0" }
geoarrow-cast = { path = "rust/geoarrow-cast", version = "0.7.0" }
geoarrow-expr-geo = { path = "rust/geoarrow-expr-geo", version = "0.7.0" }
geoarrow-flatgeobuf = { path = "rust/geoarrow-flatgeobuf", version = "0.7.0" }
geoarrow-geojson = { path = "rust/geoarrow-geojson", version = "0.7.0" }
geoarrow-schema = { path = "rust/geoarrow-schema", version = "0.7.0" }
geoarrow-test = { path = "rust/geoarrow-test", version = "0.7.0" }
geohash = "0.13.1"
geojson = "0.24"
geoparquet = { path = "rust/geoparquet", version = "0.5" }
geos = { version = "10", features = ["v3_10_0"] }
geozero = "0.14"
http-range-client = { version = "0.9", default-features = false }
indexmap = "2.5.0"
num-traits = "0.2.19"
numpy = "0.27"
object_store = "0.13"
parquet = { version = "58", default-features = false }
pyo3 = "0.28"
pyo3-arrow = "0.17"
pyo3-geoarrow = { path = "rust/pyo3-geoarrow" }
rstar = "0.12.2"
serde = "1"
serde_json = "1"
serde_with = "3"
tempfile = "3"
thiserror = "1"
tokio = { version = "1.9", default-features = false }
url = "2.5"
wkb = "0.9.1"
wkt = "0.14"
