[package]
name = "geoarrow-wasm"
version = "0.2.0-beta.2"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Efficient, vectorized geospatial operations in WebAssembly."
readme = "README.md"
repository = "https://github.com/geoarrow/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["webassembly", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.62"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# It appears that adding console_error_panic_hook only adds 4kb of size (before gzipping) so for now
# to make debugging easier we'll include it as a default feature
default = ["console_error_panic_hook"]

# Include algorithms on geometry arrays
algorithm = []
# Include Data classes for contiguous GeoArrow memory (PointData, etc)
data = []

geodesy = ["dep:geodesy", "geoarrow/geodesy"]
debug = ["console_error_panic_hook"]
io_geojson = ["geoarrow/geozero", "table"]
io_flatgeobuf = ["geoarrow/flatgeobuf", "table"]
io_object_store = [
    "dep:async-trait",
    "dep:ehttp",
    "dep:futures",
    "dep:object_store",
    "dep:reqwest",
    "dep:tokio",
]
io_parquet = ["geoarrow/parquet", "table", "dep:bytes", "dep:parquet"]
io_parquet_async = ["geoarrow/parquet_async", "io_parquet", "io_object_store"]
io_parquet_compressions = [
    "io_parquet",
    "io_parquet_brotli",
    "io_parquet_gzip",
    "io_parquet_snappy",
    "io_parquet_zstd",
    "io_parquet_lz4",
]
io_parquet_brotli = ["io_parquet", "parquet/brotli"]
io_parquet_gzip = ["io_parquet", "parquet/flate2"]
io_parquet_snappy = ["io_parquet", "parquet/snap"]
io_parquet_zstd = ["io_parquet", "parquet/zstd", "dep:zstd"]
io_parquet_lz4 = ["io_parquet", "parquet/lz4"]

# Include scalar classes
scalar = []

# Include GeoTable class
table = []

# Include vector classes for chunked GeoArrow memory (PointVector, etc)
vector = []

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.42"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
arrow-array = "50"
arrow-buffer = "50"
arrow-wasm = { git = "https://github.com/kylebarron/arrow-wasm", rev = "38aa646f6bf0ec7fe3eacc0d9e47671ac82de7b5", features = [
    "arrow1",
] }
async-trait = { version = "0.1.77", optional = true }
bytes = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
ehttp = { version = "0.5.0", optional = true, features = ["native-async"] }
futures = { version = "0.3.30", optional = true }
geo = "0.28"
geoarrow = { path = "../" }
geodesy = { version = "0.12", optional = true, features = ["js"] }
object_store = { version = "*", optional = true }
parquet = { version = "50", optional = true, features = ["arrow", "base64"] }
reqwest = { version = "*", optional = true }
thiserror = "1"
tokio = { version = "*", default-features = false, optional = true }

# Pass "wasm" and "thin" down to the transitive zstd dependency
zstd = { version = "*", features = [
    "wasm",
    "thin",
], default-features = false, optional = true }

[dependencies.web-sys]
version = "0.3.4"
features = ['console']

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
