[package]
name = "geoarrow-wasm"
version = "0.2.0-beta.5"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2024"
description = "Efficient, vectorized geospatial operations in WebAssembly."
readme = "README.md"
repository = "https://github.com/geoarrow/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["webassembly", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.85"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# It appears that adding console_error_panic_hook only adds 4kb of size (before gzipping) so for now
# to make debugging easier we'll include it as a default feature
default = ["console_error_panic_hook"]

# Include algorithms on geometry arrays
algorithm = []
# Include Data classes for contiguous GeoArrow memory (PointData, etc)
data = []

geodesy = ["dep:geodesy"]
debug = ["console_error_panic_hook"]
# io_flatgeobuf = ["geoarrow/flatgeobuf", "table"]
io_geojson = ["table"]
io_http = []
io_object_store = [
    "dep:async-trait",
    "dep:futures",
    "dep:object_store",
    "dep:reqwest",
    "dep:tokio",
    "dep:object-store-wasm",
    "dep:url",
    "parquet/object_store",
]
io_parquet = ["dep:geoparquet", "table", "data", "dep:bytes", "dep:parquet"]
io_parquet_async = [
    "async-stream",
    "geoparquet/async",
    "io_http",
    "io_object_store",
    "io_parquet",
    "range-reader",
    "wasm-streams",
]
io_parquet_compressions = [
    "io_parquet",
    "io_parquet_brotli",
    "io_parquet_gzip",
    "io_parquet_snappy",
    "io_parquet_zstd",
    "io_parquet_lz4",
]
io_parquet_brotli = ["io_parquet", "parquet/brotli"]
io_parquet_gzip = ["io_parquet", "parquet/flate2"]
io_parquet_snappy = ["io_parquet", "parquet/snap"]
io_parquet_zstd = ["io_parquet", "parquet/zstd", "dep:zstd", "dep:zstd-sys"]
io_parquet_lz4 = ["io_parquet", "parquet/lz4"]

# Include scalar classes
scalar = []

# Include GeoTable class
table = []

# Include vector classes for chunked GeoArrow memory (PointVector, etc)
vector = []

[dependencies]
wasm-bindgen = "0.2.63"
wasm-bindgen-futures = "0.4.42"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
arrow-array = "56"
arrow-buffer = "56"
arrow-wasm = { git = "https://github.com/kylebarron/arrow-wasm", rev = "6da94ef0a1522a244984a7d3d58a0339d0851d96" }
async-stream = { version = "0.3.5", optional = true }
async-trait = { version = "0.1.77", optional = true }
bytes = { version = "1", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }
futures = { version = "0.3.30", optional = true }
geo = "0.31"
geo-traits = "0.3"
geoarrow-array = { path = "../rust/geoarrow-array" }
geoarrow-schema = { path = "../rust/geoarrow-schema" }
geodesy = { version = "0.12", optional = true, features = ["js"] }
geoparquet = { path = "../rust/geoparquet", optional = true }
object_store = { version = "0.12", optional = true }
# Use released version when it supports object-store 0.12
object-store-wasm = { git = "https://github.com/kylebarron/object-store-wasm", rev = "1b1c29c9915e1d099bdc19617ca59e9d80844478", optional = true, default-features = false, features = [
    "http",
] }
parquet = { version = "56", optional = true, features = ["arrow", "base64"] }
range-reader = { version = "0.2", optional = true }
reqwest = { version = "*", optional = true }
thiserror = "1"
tokio = { version = "*", default-features = false, optional = true }
wasm-streams = { version = "0.4.0", optional = true }

serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

url = { version = "2.5.0", optional = true }

# Pass "wasm" and "thin" down to the transitive zstd dependency
zstd = { version = "*", features = [
    "wasm",
    "thin",
], default-features = false, optional = true }

# TODO: temporary to fix parquet wasm build
# upstream issue: https://github.com/gyscos/zstd-rs/issues/269
zstd-sys = { version = "=2.0.9", optional = true, default-features = false }


[dependencies.web-sys]
version = "0.3.4"
features = ['console']

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }
