[workspace]
members = ["geoarrow-compute", "geoarrow-core", "geoarrow-io", "pyo3-geoarrow"]
resolver = "2"

[workspace.package]
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
version = "0.4.0-beta.4"
edition = "2024"
homepage = "https://geoarrow.org/geoarrow-rs/"
repository = "https://github.com/geoarrow/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.85"

[workspace.dependencies]
arrow = "54"
arrow-array = "54"
arrow-buffer = "54"
arrow-schema = "54"
geo-traits = "0.2"
geoarrow = { path = "../rust/geoarrow" }
geoarrow-schema = { path = "../rust/geoarrow-schema" }
# Uncomment when publishing
# geoarrow = { version = "0.4.0-beta.1" }
geozero = "0.14"
indexmap = "2.5.0"
numpy = "0.24"
object_store = "0.11"
parquet = "54"
pyo3 = { version = "0.24", features = ["hashbrown", "serde", "anyhow"] }
pyo3-arrow = "0.8"
pyo3-geoarrow = { path = "./pyo3-geoarrow" }
serde_json = "1"
thiserror = "1"
