[workspace]
members = ["geoarrow-compute", "geoarrow-core", "geoarrow-io"]
resolver = "2"

[workspace.package]
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
version = "0.4.0"
edition = "2024"
homepage = "https://geoarrow.org/geoarrow-rs/"
repository = "https://github.com/geoarrow/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.85"

[workspace.dependencies]
arrow = "55"
arrow-array = "55"
arrow-buffer = "55"
arrow-schema = "55"
geo-traits = "0.3"
geoarrow-array = { path = "../rust/geoarrow-array" }
geoarrow-cast = { path = "../rust/geoarrow-cast" }
geoarrow-flatgeobuf = { path = "../rust/geoarrow-flatgeobuf" }
geoarrow-schema = { path = "../rust/geoarrow-schema" }
geoparquet = { path = "../rust/geoparquet" }
geozero = "0.14"
indexmap = "2.5.0"
numpy = "0.25"
object_store = "0.12"
parquet = "55"
pyo3 = { version = "0.25", features = ["hashbrown", "serde", "anyhow"] }
pyo3-arrow = "0.10.1"
pyo3-geoarrow = { path = "../rust/pyo3-geoarrow" }
serde_json = "1"
thiserror = "1"
