[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
# Note: this is only for dev dependencies
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pyarrow = ">=16.0.0"
maturin = ">=1.4.0"
shapely = ">=2.0.2"
geopandas = ">=1"
geodatasets = ">=2023.12.0"
ipykernel = ">=6.29.2"
pyogrio = ">=0.8"
affine = ">=2.4.0"
arro3-core = ">=0.3.0"
numpy = "<2"

[tool.poetry.group.docs.dependencies]
black = ">=23.10.1"
griffe-inherited-docstrings = "^1.0.0"
mkdocs = ">=1.4.3"
# https://github.com/squidfunk/mkdocs-material/issues/6983
mkdocs-material = { version = ">=9.5.17", extras = ["imaging"] }
mkdocstrings = { version = ">=0.26.0", extras = ["python"] }
mike = "^2"
