[project]
name = "python"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = []

[tool.uv]
dev-dependencies = [
    "affine>=2.4.0",
    "arro3-core>=0.5.0",
    "black>=24.10.0",
    "geodatasets>=2024.8.0",
    "geopandas>=1.0.1",
    "griffe-inherited-docstrings>=1.0.1",
    "ipykernel>=6.29.5",
    "maturin==1.9.2",
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.5.40",
    "pip>=24.2",
    "pyarrow>=17.0.0",
    "pyogrio>=0.10.0",
    "pytest>=8.3.3",
    "shapely>=2.0.6",
    "mkdocstrings[python]>=0.29.1",
    "mike>=2.1.3",
    "numpy",
    "obstore>=0.6.0",
    "lonboard>=0.10.4",
    "geoarrow-types>=0.3.0",
    "pytest-asyncio>=1.0.0",
]
