[package]
name = "geoarrow-rust-core"
version = "0.1.0"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Efficient, vectorized geospatial operations in Python."
readme = "README.md"
repository = "https://github.com/geoarrow/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "51"
arrow-buffer = "51"
arrow = { version = "51", features = ["ffi"] }
bytes = "1"
flatgeobuf = { version = "4.1.0", default-features = false }
object_store = { version = "0.9.0", features = ["aws", "azure", "gcp", "http"] }
object_store_python = { git = "https://github.com/kylebarron/object-store-python", branch = "kyle/expose-inner", package = "object-store-internal" }
# object_store_python = { git = "https://github.com/roeap/object-store-python", rev = "445e9d7fa238fc3cd31cc2820caee0d8e10fedb8", package = "object-store-internal" }
parquet = "51"
pyo3 = { version = "0.20.0", features = [
    "abi3-py38",
    "multiple-pymethods",
    "hashbrown",
    "serde",
    "anyhow",
] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
geo = "0.28"
geoarrow = { path = "../../", features = [
    "csv",
    "flatgeobuf_async",
    "flatgeobuf",
    "geozero",
    "ipc_compression",
    "parquet_compression",
    "parquet",
    "polylabel",
    "postgis",
    "rayon",
] }
geozero = { version = "0.12", features = ["with-svg"] }
numpy = "0.20"
sqlx = { version = "0.7", default-features = false, features = ["postgres"] }
thiserror = "1"
tokio = { version = "1.9", features = ["rt"] }
url = "2.5"

# reqwest is pulled in by object store, but not used by python binding itself
# for binary wheel best practice, statically link openssl
reqwest = { version = "*", features = ["native-tls-vendored"] }
