[package]
name = "geoarrow-rust-core"
version = "0.3.0-alpha.1"
authors = ["Kyle Barron <kylebarron2@gmail.com>"]
edition = "2021"
description = "Efficient, vectorized geospatial operations in Python."
readme = "README.md"
repository = "https://github.com/geoarrow/geoarrow-rs"
license = "MIT OR Apache-2.0"
keywords = ["python", "arrow", "geospatial"]
categories = ["wasm", "science::geo"]
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[dependencies]
arrow-array = "52"
arrow-buffer = "52"
arrow = { version = "52", features = ["ffi"] }
bytes = "1"
flatgeobuf = { version = "4.2.0", default-features = false }
futures = "0.3"
object_store = { version = "0.10.0", features = [
    "aws",
    "azure",
    "gcp",
    "http",
] }
parquet = { version = "52", features = ["object_store"] }
pyo3 = { version = "0.21.0", features = [
    "abi3-py38",
    "multiple-pymethods",
    "hashbrown",
    "serde",
    "anyhow",
] }
pyo3-arrow = { git = "https://github.com/kylebarron/arro3", rev = "43fbf7cdebcc4af7c513ec471f637b252e67deb7" }
pyo3-asyncio-0-21 = { version = "0.21", features = ["tokio-runtime"] }
geo = "0.28"
geoarrow = { path = "../../", features = [
    "csv",
    "flatgeobuf_async",
    "flatgeobuf",
    "geozero",
    "ipc_compression",
    "parquet_async",
    "parquet_compression",
    "parquet",
    "polylabel",
    "postgis",
    "rayon",
] }
geozero = { version = "0.13", features = ["with-svg"] }
numpy = "0.21"
sqlx = { version = "0.7", default-features = false, features = ["postgres"] }
thiserror = "1"
tokio = { version = "1.9", features = ["rt"] }
url = "2.5"

# reqwest is pulled in by object store, but not used by python binding itself
# We statically link the rust-native rustls. For a binary wheel we want a
# static-compiled openssl anyways, and having it be native rust seems to make
# things simpler.
# See native roots discussion here:
# https://github.com/rustls/rustls-native-certs/blob/0ebeee01ed61ebeacd5ebb98e7f5694b0ee70a08/README.md#should-i-use-this-or-webpki-roots
reqwest = { version = "*", features = ["rustls-tls-native-roots"] }
# Compile openssl from source
openssl = { version = "0.10", features = ["vendored"] }
