[build-system]
requires = ["maturin>=1.4.0,<2.0"]
build-backend = "maturin"

[project]
name = "geoarrow-rust-core"
requires-python = ">=3.8"
dependencies = ["arro3-core"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "geoarrow.rust.core._rust"
python-source = "python"

[tool.poetry]
name = "geoarrow-rust-core"
version = "0.0.0"
description = ""
authors = []
packages = [{ include = "python/geoarrow/rust/core" }]

[tool.poetry.dependencies]
# Note: this is only for dev dependencies
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pyarrow = "^16.0.0"
maturin = "^1.4.0"
shapely = "^2.0.2"
geopandas = "^1"
geodatasets = "^2023.12.0"
ipykernel = "^6.29.2"
pyogrio = ">=0.8"
affine = "^2.4.0"
arro3-core = ">=0.3.0b2"
numpy = "<2"
