[package]
name = "geoarrow-rust-compute"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Efficient, vectorized geospatial operations in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_compute"
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-buffer = { workspace = true }
pyo3 = { workspace = true }
pyo3-arrow = { workspace = true }
pyo3-geoarrow = { workspace = true }
geo = "0.31"
numpy = { workspace = true }
