[package]
name = "geoarrow-rust-core"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Efficient, vectorized geospatial operations in Python."
readme = "README.md"
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
rust-version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_rust"
crate-type = ["cdylib"]

[features]

[dependencies]
pyo3 = { workspace = true }
pyo3-geoarrow = { workspace = true }
geoarrow-array = { workspace = true }
geoarrow-schema = { workspace = true }
